# home

./: .envrc  .gitignore  .justfile  .lefthook.toml  .pre-commit-config.yaml  .sops.yaml  .yamlfmt.yaml  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  Taskfile.yml  ansible.cfg  backup.yaml  flake.nix  lefthook.yml  pyproject.toml  renovate.json5
.claude/: settings.local.json
.claude/skills/home-assistant-manager/: SKILL.MD
.github/: labeler.yaml  labels.yaml  renovate.json5
.github/workflows/: flux-diff.yaml  flux-image-test.yaml  label-sync.yaml  labeler.yaml  lychee.yaml  meta-labeler.yaml  release.yaml  renovate.yaml  renovate.yaml.bak
.just/: bootstrap.just  kubernetes.just  rook.just  talos.just  volsync.just
.renovate/: autoMerge.json5  customDatasources.json5  customManagers.json5  grafanaDashboards.json5  versioning.json5
.taskfiles/: flux.yaml  k8s.yaml
.taskfiles/bootstrap/: Taskfile.yaml
.taskfiles/kubernetes/: Taskfile.yaml
.taskfiles/rook/: Taskfile.yaml
.taskfiles/talos/: Taskfile.yaml
.taskfiles/volsync/: Taskfile.yaml
ansible/: requirements.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: storage-setup.yml
bootstrap/: helmfile.yaml
bootstrap/templates/: flux-values.yaml.gotmpl
kubernetes/bootstrap/: helmfile.yaml  kustomization.yaml
kubernetes/flux/: apps.yaml
kubernetes/templates/: kustomization.yaml
src/home/: __init__.py
talos/: machineconfig.yaml.j2  schematic.yaml.j2  talsecret.yaml.j2
talos/nodes/: icarus001.yaml.j2  icarus002.yaml.j2  icarus003.yaml.j2
terraform/cloudflare/: main.tf  secret.sops.yaml
(+1096 files in other folders)
