[tool.poetry]
name = "home-ansible"
version = "0.1.0"
description = ""
authors = ["Nikola Milojević <nikola@milojevic.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^10.0.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
