[tool.poetry]
authors = ["Nikola Milojević <nikola@milojevic.me>"]
description = ""
name = "home-ansible"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
ansible = "^11.0.0"
passlib = "^1.7.4"
python = "^3.11"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
